# fast_zero_project

./: .coverage  .env  Dockerfile  app.py  compose.yaml  database.db  entrypoint.sh  fly.toml  pyproject.toml  requirements.txt  vercel.json  wip.md
.github/workflows/: pipeline.yml
main/: app.py  database.py  models.py  schemas.py  security.py  settings.py
migrations/: env.py
migrations/versions/: 0070d047f165_create_users_table.py  0b1cd40cc83b_exercicio_1_e_2_aula_4.py  4ec9c17ffafb_adicionado_na_tabela_todo_created_at_e_.py  e0b5e393504d_create_todo_tables.py
routers/: auth.py  todos.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
